[package]
name = "threadsafe_zmq_example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
log = "0.4"
env_logger = "0.11.5"
zmq = "0.10.0"
rand = "0.8.5"

threadsafe_zmq = { path = ".." }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }